fix markdown xss bullshit?????
closes #119

--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -73,7 +73,7 @@
 <h2></h2>
 <div class="user_about">
 	<h3>{{ __("About this user") }}</h3>
-	{{ userpagedata.about | markdown_to_html }}
+	{{ userpagedata.about | markdown }}
 </div>
 <p class="clear_right">
 	<a href="forum/forum.php?user={{ id }}">{{ __("View threads") }}</a>
