--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -123,16 +123,16 @@
 					   </ul>
 					</div>
 				 </div>
-				 <div class="col-md-4">
+<!-- 				 <div class="col-md-4">
 					 <div class="col-md-4">
 						<img class="img-fluid" src="/assets/series_placeholder.png">
 					 </div>
 					 <div class="col-md-8">
 					 <b>Katt</b><br>
-					 Season 1<br>
-					 Episode 1<br>
+					 Season 2<br>
+					 Episode 2b<br>
 					 </div>
-				 </div>
+				 </div> -->
 			 </div>
 		 </div>
          <div class="card">
