--- a/templates/sbnext-finalium/components/comment.twig
+++ b/templates/sbnext-finalium/components/comment.twig
@@ -8,7 +8,7 @@
 		{{ userlink(data, 'u_') }} &bull; {{ data.date | relative_time}}
 		<br>
 		<div class="comment">
-		{{ data.comment | markdown_to_html }}
+		{{ data.comment | markdown }}
 		</div>
 	</div>
 </div>
